# Barrett_WAM_Controller

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  gistfile1.sh
PyQT/: main_window.py  main_window.py~  new1.py  tmp~
include/: .GMMTrajectory.h.swo  .GMMTrajectory.h.swp  .tsk.h.swp  C_4D.hpp  CvelGenerator.h  DMP.h  DMP_first.h  DMP_first.h~  Dynamics.h  Dynamics.hpp  Dynamics_mod.hpp  GMM.h  GMM.hpp  GMMTrajectory.h  G_4D.hpp  Hand_forcetorque_sense.hpp  Hand_full_move.hpp  Hand_tactile_sense.hpp  M_4D.hpp  Ncurses_plot.hpp  Optimal_Sliding_Mode.hpp  SMC_higher_order.hpp  Sliding_mode_4dof.hpp  Sliding_mode_4dof_comp.hpp  Slidingmode_4DOF.hpp  adaptive_backstepping.hpp  backstepping.hpp  constants.h  differentiator.hpp  disturbance_observer.hpp  dummy_system.hpp  inputMatrix.h  main_processor.hpp  myController.h  reference_signal.hpp  reference_signal2.hpp  robowamcod_1.hpp  robowamcod_1.hpp~  samlibs.h  second_differentiator.hpp  (+4 more)
samLibs/: constants.cpp  samlibs.cpp
src/: DMP_PID.cpp  DMP_higher_SMC.cpp  DMP_sliding_mode.cpp  DMP_sliding_mode.cpp~  Dmp_secondDOF_test.cpp  Dynamics_testing.cpp  another_controller.cpp  conditional_evaluation.cpp  eigen_test.cpp  gmm_traj_test.cpp  hand_test.cpp  higher_order_SMC.cpp  interactive_torque.cpp  ncurses_example.cpp  nilu_optimal_sliding_mode.cpp  nilu_sliding_compensator_on.cpp  nilu_slidingmode.cpp  outside_torque.cpp  playTenisLog_nilu.cpp  robowamcod_1.cpp  sliding_mode_disturbance_observer.cpp  tactile_feedback_move.cpp  test_differentiator.cpp  test_gmm.cpp  test_myController.cpp  (+8 more)
(+14 files in other folders)
